--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="dist/uriji-icons.css"></head>
 <body>
     <div class="bgc1 clearfix">
-        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> uriji-icons <small class="fgc1">(Glyphs:&nbsp;91)</small></h1>
+        <h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> uriji-icons <small class="fgc1">(Glyphs:&nbsp;98)</small></h1>
     </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
@@ -631,6 +631,20 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
+                <span class="uj-ellipsis-v"></span>
+                <span class="mls"> uj-ellipsis-v</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e979" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe979;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
                 <span class="uj-envelope"></span>
                 <span class="mls"> uj-envelope</span>
             </div>
@@ -651,6 +665,20 @@
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e92d" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#xe92d;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="uj-exclamation-circle"></span>
+                <span class="mls"> uj-exclamation-circle</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e97a" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe97a;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
@@ -925,6 +953,20 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
+                <span class="uj-paper-plane"></span>
+                <span class="mls"> uj-paper-plane</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e97b" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe97b;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
                 <span class="uj-pencil"></span>
                 <span class="mls"> uj-pencil</span>
             </div>
@@ -967,12 +1009,40 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
+                <span class="uj-plus"></span>
+                <span class="mls"> uj-plus</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e97c" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe97c;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
                 <span class="uj-plus-circle"></span>
                 <span class="mls"> uj-plus-circle</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e944" class="unit size1of2" />
                 <input type="text" maxlength="1" readonly value="&#xe944;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="uj-question-circle"></span>
+                <span class="mls"> uj-question-circle</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e97d" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe97d;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
@@ -1121,6 +1191,20 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
+                <span class="uj-table-tennis"></span>
+                <span class="mls"> uj-table-tennis</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e97e" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe97e;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
                 <span class="uj-terms"></span>
                 <span class="mls"> uj-terms</span>
             </div>
@@ -1205,6 +1289,20 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
+                <span class="uj-user-check"></span>
+                <span class="mls"> uj-user-check</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="e97f" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe97f;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
                 <span class="uj-user-plus"></span>
                 <span class="mls"> uj-user-plus</span>
             </div>
@@ -1233,12 +1331,12 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="uj-rocket-color"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span><span class="path6"></span><span class="path7"></span><span class="path8"></span><span class="path9"></span><span class="path10"></span></span>
-                <span class="mls"> uj-rocket-color</span>
+                <span class="uj-bell-color"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span><span class="path6"></span><span class="path7"></span><span class="path8"></span><span class="path9"></span><span class="path10"></span></span>
+                <span class="mls"> uj-bell-color</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e957" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe957;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e96f" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe96f;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
@@ -1275,12 +1373,12 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="uj-bell-color"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span><span class="path6"></span><span class="path7"></span><span class="path8"></span><span class="path9"></span><span class="path10"></span></span>
-                <span class="mls"> uj-bell-color</span>
+                <span class="uj-rocket-color"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span><span class="path6"></span><span class="path7"></span><span class="path8"></span><span class="path9"></span><span class="path10"></span></span>
+                <span class="mls"> uj-rocket-color</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e96f" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe96f;" class="unitRight size1of2 talign-right" />
+                <input type="text" readonly value="e957" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xe957;" class="unitRight size1of2 talign-right" />
             </fieldset>
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
